Testing for work experience

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2436,6 +2436,14 @@
 				width: 100%;
 			}
 
+		.features article .work {
+			display: inline-block;
+			padding-right: 2.5em;
+			vertical-align: middle;
+			width: 48%;
+			border-left: 2px;
+		}
+
 		.features article .inner {
 			display: inline-block;
 			vertical-align: middle;
