--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2450,6 +2450,7 @@
 		display: inline-block;
 		vertical-align: middle;
 		width: auto;
+		padding-right: 1em;
 		border-right:solid green 2px;
 	}
 
