--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2441,7 +2441,7 @@
 			vertical-align: middle;
 			padding-left: 1em;
 			width: 50%;
-			max-height: 100px;
+			max-height: 150px;
 		}
 
 			.features article .inner > :last-child {
@@ -2449,10 +2449,10 @@
 			}
 
 	.work{
-		display: block;
+		display: inline-block;
 		vertical-align: middle;
 		width: auto;
-		height: 100px;
+		height: 150px;
 		padding-right: 0.5em;
 		border-right:solid green 3px;
 	}
