--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2450,7 +2450,7 @@
 
 	.work{
 		display: inline-block;
-		vertical-align: middle;
+		text-align: center;
 		width: auto;
 		height: 150px;
 		padding-right: 0.5em;
