--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2451,6 +2451,7 @@
 	.work{
 		display: inline-block;
 		text-align: center;
+		vertical-align: center;
 		width: auto;
 		height: 150px;
 		padding-right: 0.5em;
