--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2439,7 +2439,7 @@
 		.features article .inner {
 			display: inline-block;
 			vertical-align: middle;
-			padding-left: 1em;
+			padding-left: 0.5em;
 			width: 50%;
 			max-height: 150px;
 		}
@@ -2450,10 +2450,10 @@
 
 	.work{
 		display: inline-block;
-		text-align: center;
 		vertical-align: center;
 		width: auto;
 		height: 150px;
+		line-height: 150px;
 		padding-right: 0.5em;
 		border-right:solid green 3px;
 	}
