--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2448,19 +2448,13 @@
 				margin-bottom: 0;
 			}
 
-	.span-work{
-		display: inline-block;
-		vertical-align: middle;
-		line-height: normal;
-	}
-
 	.work{
 		display: inline-block;
 		text-align: center;
 		vertical-align: center;
 		width: auto;
 		height: 150px;
-		line-height: 150px;
+		padding-top: 50%;
 		padding-right: 0.5em;
 		border-right:solid green 3px;
 	}
