--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2452,7 +2452,7 @@
 		display: inline-block;
 		vertical-align: middle;
 		text-align: center;
-		width: auto;
+		width: 50px;
 		height: 150px;
 		line-height: 150px;
 		padding-right: 0.5em;
