--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2588,7 +2588,7 @@
 
 						#header > nav ul li a.active {
 							background: #fff;
-							color: #4acaa8 !important;
+							color: #98ff98 !important;
 						}
 
 					#header > nav ul li:first-child {
