--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2481,7 +2481,7 @@
 		-ms-justify-content: space-between;
 		justify-content: space-between;
 		background: #98a0ff;
-		color: #8082a0;
+		color: #fff;
 		height: 100%;
 		overflow-y: auto;
 		position: fixed;
