--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1574,7 +1574,7 @@
 
 		a:hover {
 			border-bottom-color: transparent;
-			color: #7A80CC !important;
+			color: #6266A3 !important;
 		}
 
 	strong, b {
@@ -1726,7 +1726,7 @@
 	}
 
 	header.major h2 {
-		color: #7A80CC;
+		color: #6266A3;
 		font-size: 3.5em;
 	}
 
@@ -1789,7 +1789,7 @@
 		input[type="email"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #7A80CC;
+			border-color: #6266A3;
 		}
 
 	.select-wrapper {
@@ -1899,7 +1899,7 @@
 
 		input[type="checkbox"]:focus + label:before,
 		input[type="radio"]:focus + label:before {
-			border-color: #7A80CC;
+			border-color: #6266A3;
 		}
 
 	input[type="checkbox"] + label:before {
@@ -2092,7 +2092,7 @@
 				}
 
 				ul.feature-icons li:before {
-					background: #7A80CC;
+					background: #6266A3;
 					border-radius: 100%;
 					color: #ffffff;
 					display: block;
@@ -2379,7 +2379,7 @@
 		input[type="reset"].special,
 		input[type="button"].special,
 		.button.special {
-			background-color: #7A80CC;
+			background-color: #6266A3;
 			color: #ffffff !important;
 		}
 
@@ -2480,7 +2480,7 @@
 		-webkit-justify-content: space-between;
 		-ms-justify-content: space-between;
 		justify-content: space-between;
-		background: #7A80CC;
+		background: #6266A3;
 		color: #CACEFF;
 		height: 100%;
 		overflow-y: auto;
@@ -2588,7 +2588,7 @@
 
 						#header > nav ul li a.active {
 							background: #fff;
-							color: #7A80CC !important;
+							color: #6266A3 !important;
 						}
 
 					#header > nav ul li:first-child {
@@ -2867,7 +2867,7 @@
 					}
 
 					#titleBar .toggle:before {
-						background: #7A80CC;
+						background: #6266A3;
 						color: #ffffff;
 						content: '\f0c9';
 						display: block;
