--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2531,7 +2531,7 @@
 			}
 
 			#header > header p {
-				color: #c9cbf2;
+				color: #dcddf2;
 				font-style: italic;
 				margin: 1em 0 0 0;
 			}
@@ -2552,7 +2552,7 @@
 			}
 
 				#header > footer .icons li a {
-					color: #c9cbf2;
+					color: #dcddf2;
 				}
 
 		#header > nav {
