--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2456,7 +2456,7 @@
 		height: 150px;
 		line-height: 150px;
 		padding-right: 0.5em;
-		border-right:solid purple 3px;
+		border-right:solid green 3px;
 	}
 
 	.worker{
