testing a new image

--- a/main.css
+++ b/main.css
@@ -2619,7 +2619,7 @@
 /* One */
 
 	#one:before {
-		background-image: url("../../images/banner.jpg");
+		background-image: url("../../images/code.png");
 		background-position: top right;
 		background-repeat: no-repeat;
 		background-size: cover;
